# ardusub_sim

./: README.md  TO_DO.txt  TO_INSTALL.txt  TO_RUN.txt  TO_RUN_2.txt  rostopics.txt
ardupilot/: tasklist.json
ardupilot/ArduSub/: dumpcore.sh_ardusub.14350.out  dumpcore.sh_ardusub.23357.out  dumpstack.sh_ardusub.14350.out  dumpstack.sh_ardusub.23357.out  mav.parm  mav.tlog  mav.tlog.raw
ardupilot_gazebo/: CMakeLists.txt
ardupilot_gazebo/src/: ArduPilotPlugin.cc
blue_ws/devel/: .catkin  .rosinstall  setup.sh
blue_ws/devel/lib/bluerov-ros-pkg/: teleop_joy
blue_ws/devel/lib/bluerov_control/: lqrcpp  subs  testing
blue_ws/devel/lib/bluerov_ros_playground/: aruco  bluerov_node.py  bridge.py  node  video
blue_ws/devel/lib/freefloating_gazebo/: butter  pid_body  pid_control  pid_joints  sdf_parse  surface.py
blue_ws/devel/lib/freefloating_gazebo_demo/: freefloating_gazebo_demo
blue_ws/devel/lib/pkgconfig/: bluerov-ros-pkg.pc  bluerov_control.pc  bluerov_ros_playground.pc  freefloating_gazebo.pc  freefloating_gazebo_demo.pc
blue_ws/devel/share/bluerov-ros-pkg/cmake/: bluerov-ros-pkgConfig.cmake
blue_ws/devel/share/bluerov_control/cmake/: bluerov_controlConfig.cmake
blue_ws/src/bluerov_control/: CMakeLists.txt
blue_ws/src/bluerov_control/src/: lqrcpp.cpp  straight.cpp
blue_ws/src/bluerov_ros_playground/: CMakeLists.txt  aruco_todo.txt  gazebo.sh
blue_ws/src/bluerov_ros_playground/launch/: apm.launch
blue_ws/src/bluerov_ros_playground/src/: __aruco__dist__.cpp
blue_ws/src/bluerov_ros_playground/worlds/: underwater.world
(+6 files in other folders)
